src/components/NavBar.module.css
:root {
  --content-max-width: 800px;
  --content-width-percent: 95%;
  --bg-color: #c5e3c5;
  --inactive-color: gray;
}

.navbarWrapper {
  display: flex;
  justify-content: center;
  background-color: black;
  color: var(--inactive-color);
  width: 100vw;
  position: fixed;
  top: 0px;
  z-index: 1;
}

.navbarContainer {
  position: relative;
  width: var(--content-width-percent);
  max-width: var(--content-max-width);
}

.navbar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  text-align: left;
  width: var(--content-width-percent);
  max-width: var(--content-max-width);
  padding-top: 12px;
  padding-bottom: 12px;
}

.navItem {
  color: var(--inactive-color);
  text-decoration: none;
}

.navItem:hover {
  color: var(--bg-color);
}

.navActive {
  color: var(--bg-color);
}

.menu {
  display: none;
  flex-direction: column;
  color: var(--bg-color);
  width: 100vw;
  background-color: black;
  padding: 0;
  margin: 0;
  position: absolute;
  top: 100%;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1;
}

.menuContent {
  width: var(--content-width-percent);
  max-width: var(--content-max-width);
  margin: 0 auto;
}

.menuOpen {
  display: flex;
}

.menuItem {
  display: flex;
  align-items: center;
  padding: 4px 12px;
  line-height: 1.2;
  background-color: black;
}

.menuItem:last-child .treeChar {
  content: "└─ ";
}

.treeChar {
  margin-right: 4px;
}

.menuButton {
  font-family: inherit;
  font-size: inherit;
  padding: 0;
  color: var(--inactive-color);
  background: inherit;
  border: none;
}

@media (max-width: 376px) {
  .navItemsWrapper {
    display: none;
  }

  .menuButton:hover {
    cursor: pointer;
    color: var(--bg-color);
  }
}

@media (min-width: 377px) {
  .menu {
    display: none !important;
  }
}

